--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -20,6 +20,7 @@
         android:contentDescription="@string/user_photo" />
 
     <Button
+        android:id="@+id/select_photo_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
