--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -27,7 +27,7 @@
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
             android:contentDescription="@string/user_photo"
-            android:src="@drawable/ic_launcher_background"
+            app:loadImage="@{userprofile.photo}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:onClick="@{()->userprofile.onSelectPhotoClicked()}"
             android:text="@string/select_user_photo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
