--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -27,10 +27,10 @@
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
             android:contentDescription="@string/user_photo"
-            app:loadImage="@{userprofile.photo}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:loadImage="@{userprofile.photo}" />
 
         <Button
             android:id="@+id/select_photo_button"
@@ -42,6 +42,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/user_photo" />
+
+        <Button
+            android:id="@+id/select_photo_gallery_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:onClick="@{()->userprofile.onSelectPhotoGalleryClicked()}"
+            android:text="@string/select_photo_gallery"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/select_photo_button" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
