--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,13 @@
         android:id="@+id/userProfileFragment"
         android:name="com.example.profileusers.profile.UserProfileFragment"
         android:label="UserProfileFragment"
-        tools:layout="@layout/user_profile_fragment"/>
+        tools:layout="@layout/user_profile_fragment">
+
+
+        <action
+            android:id="@+id/action_userProfileFragment_to_photoGalleryFragment"
+            app:destination="@id/photoGalleryFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/photoGalleryFragment"
