--- a/app/src/main/res/layout/photo_item_gallery_fragment.xml
+++ b/app/src/main/res/layout/photo_item_gallery_fragment.xml
@@ -19,7 +19,7 @@
             android:layout_height="100dp"
             android:layout_margin="5dp"
             android:scaleType="centerInside"
-            app:loadImageGallery="@{userprofile.photo}"
+            app:loadImageGallery="@{userprofile.photoFilePath}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
