--- a/app/src/main/res/layout/photo_gallery_fragment.xml
+++ b/app/src/main/res/layout/photo_gallery_fragment.xml
@@ -8,7 +8,7 @@
         <import type="android.view.View" />
 
         <variable
-            name="userprofile"
+            name="viewModel"
             type="com.example.profileusers.profile.PhotoGalleryViewModel" />
 
     </data>
