--- a/app/src/main/res/layout/photo_item_gallery_fragment.xml
+++ b/app/src/main/res/layout/photo_item_gallery_fragment.xml
@@ -5,26 +5,37 @@
     <data>
 
         <variable
-            name="userprofile"
+            name="photo"
             type="com.example.profileusers.profile.Photo" />
+
+        <variable
+            name="viewModel"
+            type="com.example.profileusers.profile.PhotoGalleryViewModel" />
+
+        <variable
+            name="clickListener"
+            type="com.example.profileusers.profile.PhotoClickListener" />
 
     </data>
 
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="@{()->clickListener.onPhotoItemClick(photo)}"
             android:scaleType="centerInside"
-            app:loadImageGallery="@{userprofile.photoFilePath}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:loadImageGallery="@{photo.photoFilePath}" />
 
     </FrameLayout>
 
