removed the code for implementing the gallery intent

--- a/app/src/main/res/layout/photo_gallery_fragment.xml
+++ b/app/src/main/res/layout/photo_gallery_fragment.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.profileusers.profile.PhotoGalleryViewModel" />
+            type="com.example.profileusers.profile.photogallery.PhotoGalleryViewModel" />
 
     </data>
 
