--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -33,17 +33,6 @@
             app:loadImageGallery="@{viewModel.photoPathString}"/>
 
         <Button
-            android:id="@+id/select_photo_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:onClick="@{()->viewModel.onSelectPhotoClicked()}"
-            android:text="@string/select_user_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/user_photo" />
-
-        <Button
             android:id="@+id/select_photo_gallery_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,7 +41,7 @@
             android:text="@string/select_photo_gallery"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/select_photo_button" />
+            app:layout_constraintTop_toBottomOf="@+id/user_photo" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
