--- a/app/src/main/res/layout/croup_image_fragment.xml
+++ b/app/src/main/res/layout/croup_image_fragment.xml
@@ -12,8 +12,47 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/crop_image_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/holo_red_light">
+        android:layout_height="match_parent">
+
+        <com.theartofdev.edmodo.cropper.CropImageView
+            android:id="@+id/croup_image_view"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/croup_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/croup"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/croup_image_view" />
+
+        <Button
+            android:id="@+id/rotate_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/rotate_button"
+            app:layout_constraintEnd_toStartOf="@+id/croup_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/croup_image_view" />
+
+        <ImageView
+            android:id="@+id/result_image"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp"
+            android:scaleType="centerInside"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/croup_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
