--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,20 +15,27 @@
         <action
             android:id="@+id/action_userProfileFragment_to_photoGalleryFragment"
             app:destination="@id/photoGalleryFragment" />
-        <action
-            android:id="@+id/action_userProfileFragment_to_CropImageFragment"
-            app:destination="@id/CropImageFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/photoGalleryFragment"
         android:name="com.example.profileusers.profile.photogallery.PhotoGalleryFragment"
         android:label="PhotoGalleryFragment"
-        tools:layout="@layout/photo_gallery_fragment" />
+        tools:layout="@layout/photo_gallery_fragment" >
+        <action
+            android:id="@+id/action_photoGalleryFragment_to_CropImageFragment"
+            app:destination="@id/CropImageFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/CropImageFragment"
         android:name="com.example.profileusers.profile.CroupImageFragment"
         android:label="CropImageFragment"
-        tools:layout="@layout/croup_image_fragment"/>
+        tools:layout="@layout/croup_image_fragment">
+        <action
+            android:id="@+id/action_CropImageFragment_to_userProfileFragment"
+            app:destination="@id/userProfileFragment"
+            app:popUpTo="@id/userProfileFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
