Sending the selected photo for editing as a crop fragment.

--- a/app/src/main/res/layout/croup_image_fragment.xml
+++ b/app/src/main/res/layout/croup_image_fragment.xml
@@ -7,6 +7,10 @@
 
         <import type="android.view.View" />
 
+        <variable
+            name="viewModel"
+            type="com.example.profileusers.profile.CroupImageViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,6 +22,7 @@
             android:id="@+id/croup_image_view"
             android:layout_width="300dp"
             android:layout_height="300dp"
+            app:loadImageGalleryAsync="@{viewModel.photoPathString}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
