Sending the selected photo for editing as a crop fragment.
*fix bags https://developer.android.com/guide/navigation/navigation-pass-data

--- a/app/src/main/res/layout/croup_image_fragment.xml
+++ b/app/src/main/res/layout/croup_image_fragment.xml
@@ -22,7 +22,7 @@
             android:id="@+id/croup_image_view"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            app:loadImageGalleryAsync="@{viewModel.photoPathString}"
+            app:loadImageGalleryAsync="@{viewModel.photoPathStringToCroup}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
