--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -30,7 +30,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:loadImageGallery="@{viewModel.photoPathString}" />
+            app:loadImageGallery="@{viewModel.photoPathStringToProfile}" />
 
         <Button
             android:id="@+id/select_photo_gallery_button"
