--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,10 +32,17 @@
         android:name="com.example.profileusers.profile.CroupImageFragment"
         android:label="CropImageFragment"
         tools:layout="@layout/croup_image_fragment">
+
         <action
             android:id="@+id/action_CropImageFragment_to_userProfileFragment"
             app:destination="@id/userProfileFragment"
             app:popUpTo="@id/userProfileFragment"
             app:popUpToInclusive="true" />
+
+        <argument
+            android:name="photoPath"
+            app:argType="string" />
+
     </fragment>
+
 </navigation>
