--- a/app/src/main/res/layout/croup_image_fragment.xml
+++ b/app/src/main/res/layout/croup_image_fragment.xml
@@ -20,14 +20,15 @@
 
         <com.theartofdev.edmodo.cropper.CropImageView
             android:id="@+id/croup_image_view"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            app:loadImageGalleryAsync="@{viewModel.photoPathStringToCroup}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/croup_button"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            app:loadImageGalleryAsync="@{viewModel.photoPathStringToCroup}" />
 
         <Button
             android:id="@+id/croup_button"
@@ -35,6 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/croup"
+            app:layout_constraintBottom_toTopOf="@+id/result_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/croup_image_view" />
@@ -54,10 +56,12 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:scaleType="centerInside"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/croup_button" />
+            app:layout_constraintTop_toBottomOf="@+id/croup_button"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
