add clicked button croup and rotate image

--- a/app/src/main/res/layout/croup_image_fragment.xml
+++ b/app/src/main/res/layout/croup_image_fragment.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.profileusers.profile.CroupImageViewModel" />
+            type="com.example.profileusers.profile.croupimage.CroupImageViewModel" />
 
     </data>
 
@@ -22,12 +22,11 @@
             android:id="@+id/croup_image_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:cropScaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@+id/croup_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             app:loadImageGalleryAsync="@{viewModel.photoPathStringToCroup}" />
 
         <Button
@@ -35,13 +34,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:onClick="@{()->viewModel.onCroupPhotoClicked()}"
             android:text="@string/croup"
             app:layout_constraintBottom_toTopOf="@+id/result_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rotate_button"
             app:layout_constraintTop_toBottomOf="@+id/croup_image_view" />
 
         <Button
+            android:onClick="@{()->viewModel.onRotatePhotoClicked()}"
             android:id="@+id/rotate_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,7 +62,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/croup_button"/>
+            app:layout_constraintTop_toBottomOf="@+id/croup_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
