--- a/app/src/main/res/layout/croup_image_fragment.xml
+++ b/app/src/main/res/layout/croup_image_fragment.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent">
 
         <com.theartofdev.edmodo.cropper.CropImageView
+            android:background="@color/colorAccentAlpha"
             android:id="@+id/croup_image_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -36,33 +37,20 @@
             android:layout_marginTop="20dp"
             android:onClick="@{()->viewModel.onCroupPhotoClicked()}"
             android:text="@string/croup"
-            app:layout_constraintBottom_toTopOf="@+id/result_image"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/rotate_button"
             app:layout_constraintTop_toBottomOf="@+id/croup_image_view" />
 
         <Button
-            android:onClick="@{()->viewModel.onRotatePhotoClicked()}"
             android:id="@+id/rotate_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:onClick="@{()->viewModel.onRotatePhotoClicked()}"
             android:text="@string/rotate_button"
-            app:layout_constraintEnd_toStartOf="@+id/croup_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/croup_image_view" />
-
-        <ImageView
-            android:id="@+id/result_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/croup_button" />
+            app:layout_constraintEnd_toStartOf="@+id/croup_button"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
