--- a/app/src/main/res/layout/croup_image_fragment.xml
+++ b/app/src/main/res/layout/croup_image_fragment.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:onClick="@{()->viewModel.onCroupPhotoClicked()}"
+            android:onClick="@{()->viewModel.setResultEventCroupPhoto()}"
             android:text="@string/croup"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
