--- a/app/src/main/res/layout/croup_image_fragment.xml
+++ b/app/src/main/res/layout/croup_image_fragment.xml
@@ -11,6 +11,7 @@
             name="viewModel"
             type="com.example.profileusers.profile.croupimage.CroupImageViewModel" />
 
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,10 +20,10 @@
         android:layout_height="match_parent">
 
         <com.theartofdev.edmodo.cropper.CropImageView
-            android:background="@color/colorAccentAlpha"
             android:id="@+id/croup_image_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/colorAccentAlpha"
             app:cropScaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@+id/croup_button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,17 +31,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:loadImageGalleryAsync="@{viewModel.photoPathStringToCroup}" />
 
-        <Button
-            android:id="@+id/croup_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:onClick="@{()->viewModel.onCroupPhotoClicked()}"
-            android:text="@string/croup"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/rotate_button"
-            app:layout_constraintTop_toBottomOf="@+id/croup_image_view" />
 
         <Button
             android:id="@+id/rotate_button"
@@ -51,6 +41,28 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/croup_button"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/croup_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:onClick="@{()->viewModel.onCroupPhotoClicked(croupImageView.getCroppedImage())}"
+            android:text="@string/croup"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/save_button"
+            app:layout_constraintStart_toEndOf="@+id/rotate_button"
+            app:layout_constraintTop_toBottomOf="@+id/croup_image_view" />
+
+        <Button
+            android:id="@+id/save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{()->viewModel.onSavePhotoClicked()}"
+            android:text="@string/save_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/croup_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
