--- a/app/src/main/res/layout/photo_item_gallery_fragment.xml
+++ b/app/src/main/res/layout/photo_item_gallery_fragment.xml
@@ -28,7 +28,7 @@
             android:layout_margin="5dp"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="@{()->clickListener.onPhotoItemClick(photo)}"
+            android:onClick="@{()->clickListener.onPhotoItemClicked(photo)}"
             android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
